<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">Schoolo</string>
    <string name="submit">Submit</string>
    <string name="yes_btn">Yes</string>
    <string name="no_btn">No</string>
    <string name="dont_show_text">Do not show again</string>
    <string name="server_registering">Trying (attempt %1$d/%2$d) to register device on Demo Server.</string>
    <string name="server_registered">From Demo Server: successfully added device!</string>
    <string name="server_register_error">Could not register device on Demo Server after %1$d attempts.</string>
    <string name="server_unregistered">From Demo Server: successfully removed device!</string>
    <string name="server_unregister_error">Could not unregister device on Demo Server (%1$s).</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="options_unregister">Unregister</string>
    <string name="options_clear">Clear</string>
    <string name="options_exit">Exit</string>
    <string name="pref_cat_title_Personal">Events Settings</string>
    <string name="pref_txt_dialogTitle_EmailAccount">Enter Google Calendar Email Id</string>
    <string name="pref_txt_summary_EmailAccount">This google email account will be used to save events, into the calendar</string>
    <string name="pref_txt_title_EmailAccount">Google Calendar Email:</string>
    <string name="pref_txt_dialogTitle_KidsClasses">Enter kids classes(comma separated)</string>
    <string name="pref_txt_summary_KidsClasses">Store your all kids classes  here. Add the number of classes in which your kids are, separated by comma.</string>
    <string name="pref_txt_title_KidsClasses">Enter kids classes:</string>
    <string name="pref_txt_dialogTitle_reminderTime">Enter reminder time(numbers only)</string>
    <string name="pref_txt_summary_reminderTime">Change the reminder time for all events associated with your kids</string>
    <string name="pref_txt_title_reminderTime">Set time in minutes:</string>
    <string name="pref_txt_dlgTitle_numOfRows">Enter number of rows(numbers only)</string>
    <string name="pref_txt_summary_numberOfRows">Change the number of rows to show in the home screen for events</string>
    <string name="pref_txt_title_numberOfRows">Enter number of rows:</string>
    <string name="BSdownload">Add Events from JSON object</string>
    <string name="kid_context">Select Kid</string>
    <string name="school">Vivek High School</string>
    <string name="to_kids_page">Switch to kid\'s Page</string>
    <string name="recent_history">Recent History</string>
    <string name="app_settings">Application Settings</string>
    <string name="news_events">News and Events</string>
    <string name="other_parents">Other Parent\'s</string>
    <string name="notes_for_kiddo">Notes for my kiddo</string>
    <string name="school_page">School\'s Page</string>
    <string name="signout">Sign Out</string>
    <string name="text1">- Building Tomorrow\'s Schools</string>
    <string name="tosLink"><u>Terms of Service</u></string>
    <string name="agree_continue">Agree and Continue</string>
    <string name="verify_phone">Verify your phone number</string>
    <string name="confirm_phone">Please confirm your phone number registered with your school or institution.</string>
    <string name="app_will_send">App will send SMS to this number for authentication purpose only.</string>
    <string name="isd_code">91</string>
    <string name="hint_phone_number">Phone Number</string>
    <string name="btn_ok_text">ok</string>
    <string name="plus_sign">+</string>
    <string name="welcome_text">Welcome to Schoolo</string>
    <string name="receive_sms_line1">You should shortly receive one time SMS to </string>
    <string name="receive_sms_line2"> to complete the verification process. (Carrier charges may apply)</string>
    <string name="otp_text">Enter One Time Password(OTP)as soon as you receive it.</string>
    <string name="hint_otp">Enter password(OTP)</string>
    <string name="otp_success_text">Congratulations..! You are now part of the digital network of XYZ institute.</string>
    <string name="otp_not_matched">OTP didn\'t match</string>
    <string name="continue_btn_text">Continue...</string>
    <string name="text2">Please click NO, if the details shown are not pertaining to your ward.</string>
    <string name="text3">Otherwise, continue...</string>
    <string name="text4">Please click NO, if the details shown are not pertaining to you.</string>
    <string name="i_agree">I agree to the</string>
    <string name="no_kids">Sorry! We didn\'t find any kid(s) in the database. Please ensure you have entered correct phone number or contact your kid\'s school administration.</string>
    <string name="wrong_data_title">Oops</string>
    <string name="wrong_text1">Looks like incorrect data is there in the system. Same will be informed to the teacher and corrected.</string>
    <string name="wrong_text2">Request you to correct the below information and raise an issue to the school about incorrectness?</string>
    <string name="wrong_text3"></string>
    <string name="checkbox_text">Is picture correct</string>
    <string name="text5">(Keep the class name and teacher name which you would like to share with your students or their parents.)</string>
    <string name="text6">My institute is already registered with Schoolo. I should not be going through this...</string>
    <string name="validate_btn">Validate your number</string>
    <string name="hint_something">Type something</string>
    <string name="hint_class">E.g. Fifth</string>
    <string name="hint_subject">E.g. Maths</string>
    <string name="hint_class_title">E.g. Fifth-Maths-6am</string>
    <string name="registered_with_school">The school you selected is registered with Schoolo, you should automatically  get all the data in  your app. Add the correct number.</string>
    <string name="parent_btn">I\'m a Parent / Student</string>
    <string name="teacher_btn">I\'m a Teacher</string>
    <string name="rc_text1a">Server will send one time SMS to</string>
    <string name="rc_text1b">to complete the verification process. (Carrier charges may apply)</string>
    <string name="rc_text2">On receipt, please enter One Time Password(OTP), sent to mobile number</string>
    <string name="rc_text3">App will automatically detect OTP if its running on same device as with supplied phone number.</string>
    <string name="rc_text4">Please try using different phone number you may have registered with your school/institution</string>
    <string name="rc_text5">If you feel this the number you have with the school, please check with the school to add  your number to the database.</string>
    <string name="ima">I\'m a </string>
    <string name="parent">Parent</string>
    <string name="teacher">Teacher</string>
    <string name="father">Father</string>
    <string name="mother">Mother</string>
    <string name="hint_student_name">Your Ward Name</string>
    <string name="set_student_pic_text">Set your ward\'s profile picture</string>
    <string name="text7">Please provide your details, as well:</string>
    <string name="hint_firstname">First name</string>
    <string name="hint_lastname">Last name</string>
    <string name="confirm_tos">I confirm that the details provided are correct and agree to the</string>
    <string name="send_to">Send To:</string>
    <string name="hint_type_msg">Type message here</string>
    <string name="description_search">Search</string>
    <string name="invite">invite</string>
    <string name="subscribers">Subscribers</string>
    <string name="title_search">Search</string>
    <string name="search_hint">Search Schoolo</string>
    <string name="search_label">Google I/O sessions</string>
    <string name="no_contacts_found">No contacts, yet.</string>
    <string name="title_activity_chat">ChatActivity</string>
    <string name="page_home">Home </string>
    <string name="desc_cam">Camera Shot </string>
    <string name="desc_people">People </string>
    <string name="desc_bell">Bell </string>
    <string name="no_events_found">No event pushed for the this month, yet.</string>
    <string name="dont_show_checked_text">School events will be pushed to your google Calendar without asking again</string>
    <string name="event_popup_title">Saving Events to Calendar</string>
    <string name="event_popup_msg">School annual calendar has been stored in your phone. Your child\'s specific events will be pushed to your calendar, on tap of \'OK\' button. By default, reminder has been set to 1 day before the event. You can change the reminder time, either by changing the reminder time of individual event in the calendar, or by changing the default time of the reminder in the app\'s settings.  </string>
    <string name="monthly_events"> Monthly Events</string>
    <string name="no_messages_found">No messages received.</string>
    <string name="page_child_profile">Child Profile </string>
    <string name="page_educator_msgs">Educator Messages </string>
    <string name="page_view_image">Show Image </string>
    <string name="event_detail">Event Detail</string>
    <string name="user_type_text">Before we begin, how would you like to open this app</string>
    <string name="first_part_api_link">http://ec2-54-85-38-34.compute-1.amazonaws.com:8090/schoolorestapi/v1/</string>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="title_activity_chat_contact_list">ChatContactList</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_user_type">Schoolo</string>
    <string name="title_activity_parent_list">ParentListActivity</string>
    <string name="action_new_message">New Message</string>
    <string name="action_take_attendance">Take Attendance</string>
    <string name="navdrawer_item_experts_directory">Experts</string>
    <string name="navdrawer_item_explore">Explore</string>
    <string name="navdrawer_item_map">Map</string>
    <string name="navdrawer_item_my_schedule">My Schedule</string>
    <string name="navdrawer_item_people_ive_met">People I\'ve Met</string>
    <string name="navdrawer_item_settings">Settings</string>
    <string name="navdrawer_item_sign_in">Sign in</string>
    <string name="navdrawer_item_social">Social</string>
    <string name="navdrawer_item_video_library">Video library</string>
    <string name="title_activity_chat_educator">ChatEducatorActivity</string>
    <string name="title_activity_educator_chat">EducatorChatActivity</string>
    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_example">Example action</string>
    <string name="title_activity_home_educator">HomeEducatorActivity</string>
    <string name="all_themes">All Themes</string>
    <string name="all_topics">All Topics</string>
    <string name="all_types">All Types</string>
    <string name="themes">Themes</string>
    <string name="topics">Topics</string>
    <string name="types">Types</string>
    <string name="no_matching_sessions">No matching sessions.</string>
    <string name="no_matching_sessions_in_interval">No sessions available in this time slot.</string>
    <string name="no_matching_videos">No matching events.</string>
    <string name="day_title_today">Today</string>
    <string name="day_title_tomorrow">Tomorrow</string>
    <string name="day_title_yesterday">Yesterday</string>
    <string name="others">Others</string>
    <string name="session_finished">Ended</string>
</resources>