<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <!-- should appear as action button -->
    <!--<item
        android:id="@+id/action_add"
        android:showAsAction="always"
        android:icon="@android:drawable/ic_menu_add"
        android:title="Add New ChatId" />-->


    <!-- should always be in the overflow (never in action bar) -->
    <item
        android:id="@+id/school"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/school" />
    <item
        android:id="@+id/to_kids_page"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/to_kids_page" />
    <item
        android:id="@+id/recent_history"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/recent_history" />
    <item
        android:id="@+id/app_settings"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/app_settings" />
    <item
        android:id="@+id/news_events"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/news_events" />
    <item
        android:id="@+id/other_parents"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/other_parents" />
    <item
        android:id="@+id/notes_for_kiddo"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/notes_for_kiddo" />
    <item
        android:id="@+id/school_page"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/school_page" />
    <item
        android:id="@+id/signout"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/signout" />
    <!-- <item -->
    <!-- android:id="@+id/account_login" -->
    <!-- android:orderInCategory="100" -->
    <!-- android:showAsAction="never" -->
    <!-- android:title="@string/account_login"/> -->

</menu>